--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@ button:hover {
     </style>
   
   
-                    <center><img src="./PETITION to End Bad Governance in Nigerian_files/A693316D-37B4-4394-AFAD-624C365AFFC4.gif" alt="unicef" style="width: 100%;">
-<img src="./PETITION to End Bad Governance in Nigerian_files/Protest.webp" alt="unicef" style="width: 100%;">
+                    <center><img src="A693316D-37B4-4394-AFAD-624C365AFFC4.gif" alt="unicef" style="width: 100%;">
+<img src="Protest.webp" alt="unicef" style="width: 100%;">
 </center>
                      <marquee class="horizontal_marque" direction="left">Join the online movement and sign the petition to promote good governance in Nigeria</marquee> <div class="A">
            
